# godwoken

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  capsule.toml  deployment.toml  gw_benchmark_config.toml  output_data  package.json  rust-toolchain.toml  tsconfig.json
aggregator/: Cargo.toml  README.md
aggregator/native/: Cargo.toml
aggregator/src/: chain.rs  config.rs  crypto.rs  deposition.rs  main.rs  tx_pool.rs
aggregator/src/collector/: lumos.rs  mod.rs
aggregator/src/consensus/: mod.rs  single_aggregator.rs  traits.rs
aggregator/src/jsonrpc_types/: fixed_bytes.rs  layer2.rs  mod.rs
aggregator/src/rpc/: mod.rs  server.rs
aggregator/src/state_impl/: code_store.rs  mod.rs  overlay.rs  state_impl.rs
aggregator/tests/: test_cases.js
common/: Cargo.toml
common/src/: lib.rs  smt.rs  state.rs
config/: Cargo.toml
contracts/: .gitignore  Cargo.toml  README.md  capsule.toml
contracts/always-success/src/: main.rs
contracts/challenge-lock/: Cargo.toml
contracts/challenge-lock/src/: entry.rs  main.rs
contracts/ckb-smt/src/: lib.rs
contracts/contracts/deposition-lock/: Cargo.toml  build.rs
contracts/contracts/state-validator/: Cargo.toml
contracts/custodian-lock/: Cargo.toml
contracts/custodian-lock/src/: entry.rs  error.rs  main.rs
contracts/deposit-lock/src/: entry.rs
contracts/deposition-lock/: Cargo.toml  build.rs
contracts/deposition-lock/src/: code_hashes.rs  entry.rs  error.rs  main.rs
contracts/dummy-state-validator/: Cargo.toml
contracts/dummy-state-validator/src/: context.rs  entry.rs  error.rs  main.rs
contracts/gw-state/: Cargo.toml
contracts/gw-state/src/: lib.rs
contracts/gw-utils/src/: error.rs  signature.rs  type_id.rs
contracts/secp256k1-utils/: build.rs
contracts/stake-lock/: Cargo.toml
contracts/stake-lock/src/: entry.rs  main.rs
contracts/state-validator/: Cargo.toml
contracts/state-validator/src/: blake2b.rs  cells.rs  consensus.rs  context.rs  entry.rs  error.rs  key.rs  main.rs  smt.rs  types.rs  util.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs
contracts/tron-account-lock/src/: entry.rs  main.rs
contracts/validator-utils/: Cargo.toml
contracts/validator-utils/src/: error.rs  kv_state.rs  lib.rs  search_cells.rs  signature.rs
contracts/withdrawal-lock/: Cargo.toml
contracts/withdrawal-lock/src/: entry.rs
crates/autorocks/: .gitmodules  Cargo.toml
crates/autorocks/autorocks-sys/: Cargo.toml  build.rs  db.toml  snappy-stubs-public.h
crates/autorocks/bench/: Cargo.toml
crates/autorocks/src/: db.rs  error.rs  iter.rs  lib.rs  slice.rs  snapshot.rs  transaction.rs  write_batch.rs
crates/autorocks/tests/: tests.rs
crates/benches/: Cargo.toml
crates/benches/benches/: bench_main.rs
crates/benches/smt_data/: db.toml
crates/benches/src/: lib.rs
crates/benchmark/: Cargo.toml  README.md
crates/benchmark/src/: batch.rs  config.rs  godwoken_rpc.rs  lib.rs  main.rs  plan.rs  polyman.rs  stats.rs  tx.rs
crates/block-producer/: Cargo.toml
crates/block-producer/src/: block_producer.rs  block_sync_client.rs  block_sync_server.rs  cell_collector.rs  chain_updater.rs  challenger.rs  cleaner.rs  custodian.rs  db_block_validator.rs  debugger.rs  deposit.rs  history_validator.rs  indexer_types.rs  lib.rs  local_cells.rs  main.rs  metrics.rs  node.rs  payment.rs  poa.rs  poller.rs  produce_block.rs  psc.rs  replay_block.rs  rpc_client.rs  runner.rs  stake.rs  sync_l1.rs  test_mode_control.rs  trace.rs  transaction_skeleton.rs  types.rs  utils.rs  wallet.rs  withdrawal.rs  withdrawal_finalizer.rs  withdrawal_unlocker.rs
crates/builtin-binaries/: Cargo.toml  README.md  build.rs
crates/builtin-binaries/src/: lib.rs
crates/chain/: Cargo.toml
crates/chain/src/: chain.rs  challenge.rs  genesis.rs  lib.rs  main.rs  mem_pool.rs  metrics.rs  next_block_context.rs  tx_pool.rs
crates/challenge/: Cargo.toml
crates/challenge/src/: cancel_challenge.rs  context.rs  enter_challenge.rs  lib.rs  offchain.rs  revert.rs  types.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: backend.rs  blake2b.rs  builtin_scripts.rs  builtins.rs  ckb_decimal.rs  error.rs  h256_ext.rs  lib.rs  merkle_utils.rs  registry_address.rs  smt.rs  state.rs  sudt.rs  test_traits.rs  traits.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  constants.rs  fork_config.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: config.rs  db.rs  error.rs  iter.rs  lib.rs  memory_stats.rs  migrate.rs  read_only_db.rs  schema.rs  snapshot.rs  transaction.rs  write_batch.rs
crates/dynamic-config/: Cargo.toml
crates/dynamic-config/src/: fee_config.rs  lib.rs  manager.rs  whitelist_config.rs
crates/eoa-mapping/: Cargo.toml
crates/eoa-mapping/src/: eth_register.rs  lib.rs
crates/generator/: Cargo.toml  build.rs
crates/generator/contract/: generator  validator
crates/generator/src/: account_whitelist.rs  backend_manage.rs  builtin_scripts.rs  constants.rs  contract_creator_allowlist.rs  dummy_state.rs  erc20_creator_whitelist.rs  error.rs  generator.rs  genesis.rs  genesis_accounts.rs  lib.rs  state_ext.rs  sudt.rs  traits.rs  types.rs  utils.rs  vm_cost_model.rs
crates/godwoken-bin/: Cargo.toml
crates/godwoken-bin/src/: main.rs
crates/jsonrpc-types/: Cargo.toml
crates/jsonrpc-types/src/: blockchain.rs  collector.rs  debug.rs  debugger.rs  fixed_bytes.rs  genesis.rs  godwoken.rs  layer2.rs  lib.rs  parameter.rs  test_mode.rs
crates/mem-pool/: Cargo.toml
crates/mem-pool/src/: account_creator.rs  batch.rs  (+15 more)
generator/: Cargo.toml
generator/src/: blake2b.rs  context.rs  dummy_state.rs  error.rs  generator.rs  lib.rs  smt.rs  state.rs  state_ext.rs  syscalls.rs  tests.rs  wrapped_store.rs
tests/: .gitignore  Cargo.toml  README.md  example.env  init.sh  run.sh
tests/configs/: godwoken-config.toml  lumos-config.json  scripts-deploy-result.json
tests/src/: docker-compose.yml  lib.rs  main.rs  tests.rs  worker.rs
types/: Cargo.toml  build.rs
types/schemas/: blockchain.mol  godwoken.mol
types/src/: core.rs  extension.rs  lib.rs
(+1034 files in other folders)
