[workspace]
members = [
  "gwos/crates/types",
  "gwos/crates/common",
  "crates/challenge",
  "crates/chain",
  "crates/config",
  "crates/mem-pool",
  "crates/generator",
  "crates/traits",
  "crates/db",
  "crates/store",
  "crates/block-producer",
  "crates/jsonrpc-types",
  "crates/rpc-server",
  "crates/rpc-client",
  "crates/tools",
  "crates/tests",
  "crates/benches",
  "crates/version",
  "crates/utils",
  "crates/tx-filter",
  "crates/replay-chain",
  "crates/dynamic-config",
  "crates/p2p-network",
  "crates/polyjuice-sender-recover",
  "crates/godwoken-bin",
  "crates/telemetry",
  "crates/metrics",
]

exclude = [
 "gwos-evm/polyjuice-tests",
 "gwos/c-uint256-tests",
 "gwos/contracts",
]

[profile.release]
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

