[workspace]
members = [
  "gwos/crates/types",
  "gwos/crates/common",
  "gwos/crates/c-uint256-tests",
  "crates/challenge",
  "crates/chain",
  "crates/config",
  "crates/mem-pool",
  "crates/generator",
  "crates/traits",
  "crates/store",
  "crates/block-producer",
  "crates/jsonrpc-types",
  "crates/rpc-server",
  "crates/rpc-client",
  "crates/tools",
  "crates/tests",
  "crates/benches",
  "crates/version",
  "crates/utils",
  "crates/tx-filter",
  "crates/replay-chain",
  "crates/p2p-network",
  "crates/polyjuice-sender-recover",
  "crates/godwoken-bin",
  "crates/telemetry",
  "crates/metrics",
  "crates/builtin-binaries",
]

exclude = [
 # Autorocks is in its own workspace because it's relatively independent of
 # other godwoken crates. This also makes rust-analyzer and cargo faster when
 # working on godwoken.
 "crates/autorocks",
 # gw-builtin-binaries is separate released, so we put it in its own workspace
 "crates/builtin-binaries",
 "gwos-evm/polyjuice-tests",
 "gwos/contracts",
]

[profile.release]
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

