[package]
name = "gw-config"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
