[workspace]
members = [
    "custodian-lock",
    "deposition-lock",
    "withdrawal-lock",
    "challenge-lock",
    "stake-lock",
    "state-validator",
    "dummy-state-validator",
    "validator-utils",
]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
