[package]
name = "godwoken-generator"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godwoken-types = { path = "../types" }
anyhow = "1.0"
sparse-merkle-tree = "0.3"
blake2b-rs = "0.2"
ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm.git", tag = "0.19.1", features = ["detect-asm"] }
thiserror = "1.0"
