[package]
name = "deposition-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
blake2b-rs = "0.1.5"

[dependencies]
ckb-std = "0.6.3"
godwoken-types = { path = "../../types", default-features = false }
ckb-lib-secp256k1 = { git = "https://github.com/jjyr/ckb-dynamic-loading-secp256k1.git", rev = "c6fcd3c" }
