[package]
name = "deposition-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
blake2b-rs = "0.1.5"

[dependencies]
ckb-std = "0.7.2"
gw-types = { path = "../../crates/types", default-features = false }
ckb-lib-secp256k1 = "0.1"
