[package]
name = "stake-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../../crates/types", default-features = false }
gw-common = { path = "../../crates/common", default-features = false }
validator-utils = { path = "../validator-utils" }
