[package]
name = "state-validator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.6.3"
gw-types = { path = "../../crates/types", default-features = false }
gw-common = { path = "../../crates/common" }
ckb-lib-secp256k1 = { git = "https://github.com/jjyr/ckb-dynamic-loading-secp256k1.git", branch = "master" }
