[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.3" }
ckb-testtool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.3" }
