[package]
name = "validator-utils"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std.git", branch = "add-more-functions-on-since" }
gw-types = { path = "../../crates/types", default-features = false }
