[package]
name = "gw-benches"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"
description = "Godwoken benchmarks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
gw-store = { path = "../store" }

[[bench]]
name = "bench_main"
harness = false