[package]
name = "gw-benches"
version = "1.7.2"
authors = ["Nervos Network"]
edition = "2018"
description = "Godwoken benchmarks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.6", features = ["flamegraph", "criterion"] }
gw-store = { path = "../store" }
gw-common = { path = "../common" }
gw-mem-pool = { path = "../mem-pool" }
gw-generator = { path = "../generator" }
gw-types = { path = "../types" }
gw-traits = { path = "../traits" }
gw-db = { path = "../db" }
gw-config = { path = "../config" }
gw-utils = { path = "../utils" }

[[bench]]
name = "bench_main"
harness = false
