[package]
name = "gw-benches"
version = "1.8.0-rc3"
authors = ["Nervos Network"]
edition = "2018"
description = "Godwoken benchmarks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.6", features = ["flamegraph", "criterion"] }
gw-store = { path = "../store" }
gw-common = { path = "../../gwos/crates/common" }
gw-smt = { path = "../smt" }
gw-mem-pool = { path = "../mem-pool" }
gw-generator = { path = "../generator" }
gw-types = { path = "../../gwos/crates/types" }
gw-traits = { path = "../traits" }
gw-config = { path = "../config" }
gw-utils = { path = "../utils" }
gw-builtin-binaries = { path = "../builtin-binaries" }

[[bench]]
name = "bench_main"
harness = false
