[package]
name = "gw-benchmark"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gw-benchmark"
path = "src/main.rs"

[dependencies]
gw-types = { path = "../types" }
gw-tools = { path = "../tools" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
clap = "2.33.3"
secp256k1 = "0.20.3"
tokio = { version = "1.14", features = ["full"] }
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.5"
log = "0.4"
env_logger = "0.8"
ckb-jsonrpc-types = "0.100.0"
ckb-types = "0.100.0"
ckb-resource = "0.100.0"
ckb-hash = "0.100.0"
ckb-fixed-hash = "0.100.0"
ckb-sdk = "0.100.0"
ckb-crypto = "0.100.0"
bytes = "1.1.0"
molecule = { version = "0.7.2", default-features = false }
sha3 = "0.9.1"
blake2b-ref = { version = "0.2", default-features = false }
lazy_static = "1.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.4"
jsonrpc-core = "17"
sparse-merkle-tree = { version = "0.5.2-rc1", default-features = false }
hex = "0.4"