[package]
name = "gw-block-producer"
version = "1.2.2"
authors = ["Nervos Network"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "godwoken"
path = "src/main.rs"

[dependencies]
gw-challenge = { path = "../challenge" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-chain = { path = "../chain" }
gw-types = { path = "../types" }
gw-db = { path = "../db" }
gw-store = { path = "../store" }
gw-generator = { path = "../generator" }
gw-mem-pool = { path = "../mem-pool" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-rpc-server = { path = "../rpc-server" }
gw-rpc-client = { path = "../rpc-client" }
gw-utils = { path = "../utils" }
gw-version = { path = "../version" }
gw-ckb-hardfork = { path = "../ckb-hardfork" }
gw-dynamic-config = { path = "../dynamic-config"}
ckb-crypto = "0.100.0"
ckb-fixed-hash = "0.100.0"
ckb-types = "0.100.0"
ckb-chain-spec = "0.100.0"
toml = "0.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-channel = "1.4.2"
async-jsonrpc-client = { version = "0.3.0", default-features = false, features = ["http-tokio"] }
clap = "2.33.3"
futures = "0.3.13"
log = "0.4.14"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full", "tracing"] }
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
async-trait = "0.1"
semver = "1.0"
rayon = "1.5"
thiserror = "1.0"
# For latest tracing
sentry = { git = "https://github.com/getsentry/sentry-rust", rev = "df694a49595d6890c510d80b85cfbb4b5ae6159a" }
sentry-tracing = { git = "https://github.com/getsentry/sentry-rust", rev = "df694a49595d6890c510d80b85cfbb4b5ae6159a" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot", "smallvec", "tracing-log"] }
tracing-opentelemetry = "0.17"
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
# unstable features
tokio-metrics = "0.1.0"
console-subscriber = "0.1.3"
tentacle = { version = "0.4.0-beta.4" }
gw-p2p-network = { path = "../p2p-network" }
num_cpus = "1.13.1"

[target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
tikv-jemallocator = { version = "0.4.0", features = ["unprefixed_malloc_on_supported_platforms"] }

[features]
profiling = ["tikv-jemallocator/profiling"]
