[package]
name = "gw-block-producer"
version = "1.7.0-rc2"
authors = ["Nervos Network"]
edition = "2021"

[dependencies]
gw-challenge = { path = "../challenge" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-chain = { path = "../chain" }
gw-types = { path = "../types" }
gw-db = { path = "../db" }
gw-store = { path = "../store" }
gw-generator = { path = "../generator" }
gw-mem-pool = { path = "../mem-pool" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-rpc-server = { path = "../rpc-server" }
gw-rpc-client = { path = "../rpc-client" }
gw-utils = { path = "../utils" }
gw-ckb-hardfork = { path = "../ckb-hardfork" }
gw-dynamic-config = { path = "../dynamic-config"}
gw-polyjuice-sender-recover = { path = "../polyjuice-sender-recover" }
ckb-crypto = "0.104.0"
ckb-fixed-hash = "0.104.0"
ckb-types = "0.104.0"
ckb-chain-spec = "0.104.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-channel = "1.4.2"
async-jsonrpc-client = { version = "0.3.0", default-features = false, features = ["http-tokio"] }
futures = "0.3.13"
log = "0.4.14"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full", "tracing"] }
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
async-trait = "0.1"
semver = "1.0"
thiserror = "1.0"
# For latest tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "parking_lot", "smallvec", "tracing-log"] }
tracing-opentelemetry = "0.17"
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
# unstable features
tokio-metrics = "0.1.0"
console-subscriber = "0.1.3"
tentacle = "0.4.0"
gw-p2p-network = { path = "../p2p-network" }
bytes = "1.2.0"
