[package]
name = "gw-block-producer"
version = "1.8.0-rc3"
authors = ["Nervos Network"]
edition = "2021"

[dependencies]
gw-challenge = { path = "../challenge" }
gw-common = { path = "../../gwos/crates/common" }
gw-smt = { path = "../smt" }
gw-config = { path = "../config" }
gw-chain = { path = "../chain" }
gw-types = { path = "../../gwos/crates/types" }
gw-db = { path = "../db" }
gw-store = { path = "../store" }
gw-generator = { path = "../generator" }
gw-mem-pool = { path = "../mem-pool" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-rpc-server = { path = "../rpc-server" }
gw-rpc-client = { path = "../rpc-client" }
gw-utils = { path = "../utils" }
gw-dynamic-config = { path = "../dynamic-config"}
gw-polyjuice-sender-recover = { path = "../polyjuice-sender-recover" }
gw-telemetry = { path = "../telemetry" }
gw-metrics = { path = "../metrics" }
ckb-crypto = "0.105.1"
ckb-fixed-hash = "0.105.1"
ckb-types = "0.105.1"
ckb-chain-spec = "0.105.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-channel = "1.4.2"
async-jsonrpc-client = { version = "0.3.0", default-features = false, features = ["http-tokio"] }
futures = "0.3.13"
log = "0.4.14"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
async-trait = "0.1"
semver = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tentacle = "0.4.0"
gw-p2p-network = { path = "../p2p-network" }
bytes = "1.2.0"
