[package]
name = "gw-chain"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-challenge = { path = "../challenge" }
gw-types = { path = "../types" }
gw-config = { path = "../config" }
gw-common = { path = "../common" }
gw-generator = { path = "../generator" }
gw-mem-pool = { path = "../mem-pool" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
ckb-fixed-hash = "0.38.0"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
smol = "1.2.5"
crossbeam-channel = "0.5"
toml = "0.5"
log = "0.4"
hex = "0.4"
