[package]
name = "gw-challenge"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-types = { path = "../types" }
gw-db = { path = "../db" }
gw-store = { path = "../store" }
gw-generator = { path = "../generator" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-rpc-client = { path = "../rpc-client" }
gw-poa = { path = "../poa" }
gw-traits = { path = "../traits" }
gw-utils = { path = "../utils" }
gw-ckb-hardfork = { path = "../ckb-hardfork" }
ckb-fixed-hash = "0.100.0"
ckb-types = "0.100.0"
ckb-script = "0.100.0"
ckb-traits = "0.100.0"
ckb-chain-spec = "0.100.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
log = "0.4.14"
thiserror = "1.0"
smol = "1.2.5"
arc-swap = "1.5"
