[package]
name = "gw-challenge"
version = "1.8.0-rc3"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../../gwos/crates/types" }
gw-common = { path = "../../gwos/crates/common" }
gw-smt = { path = "../smt" }
gw-config = { path = "../config" }
gw-store = { path = "../store" }
gw-generator = { path = "../generator" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-rpc-client = { path = "../rpc-client" }
gw-traits = { path = "../traits" }
gw-utils = { path = "../utils" }
ckb-fixed-hash = "0.105.1"
ckb-types = "0.105.1"
ckb-script = "0.105.1"
ckb-traits = "0.105.1"
ckb-chain-spec = "0.105.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
log = "0.4.14"
thiserror = "1.0"
tokio = "1"
arc-swap = "1.5"
