[package]
name = "gw-common"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
sparse-merkle-tree = { version = "0.5.0-rc2", default-features = false }
gw-hash = { path = "../hash" }
thiserror = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["sparse-merkle-tree/std", "thiserror"]
