[package]
name = "gw-common"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree", branch = "update-all", default-features = false }
merkle-cbt = { version = "0.3.0", default-features = false }
gw-hash = { path = "../hash" }
thiserror = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["sparse-merkle-tree/std", "thiserror"]
