[package]
name = "gw-common"
version = "1.7.3"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
sparse-merkle-tree = { version = "0.5.2-rc1", default-features = false }
merkle-cbt = { version = "0.3.0", default-features = false }
gw-hash = { path = "../hash" }
thiserror = { version = "1.0", optional = true }
gw-types = { path = "../types", default-features = false }

[features]
default = ["std"]
std = ["sparse-merkle-tree/std", "thiserror", "gw-types/std"]
