[package]
name = "gw-config"
version = "1.8.0-rc1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-jsonrpc-types = { path = "../jsonrpc-types" }
ckb-fixed-hash = "0.105.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
toml = "0.5"
