[package]
name = "gw-config"
version = "1.8.0-rc3"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
no-builtin = ["gw-builtin-binaries/no-builtin"]

[dependencies]
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-builtin-binaries = { path = "../builtin-binaries" }
ckb-fixed-hash = "0.105.1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
lazy_static = "1.4"
toml = "0.5"

[dev-dependencies]
gw-utils = { path = "../utils" }
