[package]
name = "gw-db"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "=0.16.1", features = ["snappy"] }
gw-config = { path = "../config" }
libc = "0.2"
thiserror = "1.0"
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
