[package]
name = "gw-db"
version = "1.5.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "0.18", default-features = false, features = ["snappy"] }
gw-config = { path = "../config" }
libc = "0.2"
thiserror = "1.0"
tempfile = "3.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
