[package]
name = "gw-db"
version = "1.8.0-rc1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "0.18", default-features = false, features = ["snappy", "march-native"] }
gw-config = { path = "../config" }
libc = "0.2"
tempfile = "3.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.66"

[dev-dependencies]
tempfile = "3.0"

[features]
smt-trie = []
