[package]
name = "gw-dynamic-config"
version = "1.7.2"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-config = { path = "../config" }
gw-tx-filter = { path = "../tx-filter"}
ckb-fixed-hash = "0.104.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
toml = "0.5"
anyhow = "1.0"
arc-swap = "1.5"
