[package]
name = "gw-eoa-mapping"
version = "1.4.0-rc1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../types" }
gw-common = { path = "../common" }
gw-utils = { path = "../utils" }
gw-traits = { path = "../traits" }
anyhow = "1.0"
sha3 = "0.9.1"
