[package]
name = "gw-generator"
version = "1.7.0-rc1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
enable-always-success-lock = []

[dependencies]
gw-types = { path = "../types" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
gw-ckb-hardfork = { path = "../ckb-hardfork" }
gw-utils = { path = "../utils"}
anyhow = "1.0"
blake2b-rs = "0.2"
ckb-vm = "0.22.0"
ckb-vm-aot = "0.22.0"
thiserror = "1.0"
lazy_static = "1.4"
rlp = "0.5.0"
secp256k1 = { version = "0.20", features = ["recovery"] }
sha3 = "0.9.1"
log = "0.4"
hex = "0.4"
tokio = "1.15"
arc-swap = "1.5"
ethabi = "16.0.0"
tracing = { version = "0.1", features = ["attributes"] }

[dev-dependencies]
gw-utils = {path = "../utils" }
tempfile = "3"
