[package]
name = "gw-generator"
version = "1.14.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["detect-asm"]
detect-asm = ["ckb-vm/detect-asm"]
enable-always-success-lock = []

[dependencies]
gw-types = { path = "../../gwos/crates/types" }
gw-common = { path = "../../gwos/crates/common" }
gw-smt = { path = "../smt" }
gw-config = { path = "../config" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
gw-utils = { path = "../utils"}
gw-jsonrpc-types = { path = "../jsonrpc-types" }
ckb-types = "0.111.0-rc8"
anyhow = "1.0"
blake2b-rs = "0.2"
# Use crates.io version if our changes are merged.
ckb-vm = { git = "https://github.com/blckngm/ckb-vm.git", branch = "rename-symbols-2" }
thiserror = "1.0"
lazy_static = "1.4"
rlp = "0.5.0"
secp256k1 = { version = "0.24", features = ["recovery"] }
substrate-bn = { git = "https://github.com/paritytech/bn.git", rev = "63f8c58" }
log = "0.4"
hex = "0.4"
tokio = "1"
sha3 = "0.10.6"
arc-swap = "1.5"
ethabi = { version = "18.0.0", default-features = false, features = ["thiserror", "std"] }
tracing = { version = "0.1", features = ["attributes"] }
goblin = "0.4.0"

[dev-dependencies]
gw-utils = {path = "../utils" }
gw-builtin-binaries = { path = "../builtin-binaries" }
tempfile = "3"
