[package]
name = "godwoken-bin"
version = "1.5.0-rc2"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-types = "0.104.0"
clap = "2.33.3"
indicatif = "0.16"
gw-block-producer = { path = "../block-producer" }
gw-chain = { path = "../chain" }
gw-challenge = { path = "../challenge" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-db = { path = "../db" }
gw-generator = { path = "../generator" }
gw-jsonrpc-types = { path = "../jsonrpc-types" }
gw-store = { path = "../store" }
gw-types = { path = "../types" }
gw-utils = { path = "../utils" }
gw-version = { path = "../version" }
log = "0.4.14"
num_cpus = "1.13.1"
rayon = "1.5"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full", "tracing"] }
toml = "0.5"

[target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
tikv-jemallocator = { version = "0.4.0", features = ["unprefixed_malloc_on_supported_platforms"] }

[features]
profiling = ["tikv-jemallocator/profiling"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "godwoken"
path = "src/main.rs"
