[package]
name = "gw-jsonrpc-types"
version = "1.6.0-rc1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.4"
gw-types = { path = "../types" }
gw-common = { path = "../common" }
ckb-jsonrpc-types = "0.104.0"
ckb-fixed-hash = "0.104.0"
anyhow = "1.0"
