[package]
name = "gw-jsonrpc-types"
version = "1.8.0-rc1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.4"
gw-types = { path = "../../gwos/crates/types" }
gw-common = { path = "../../gwos/crates/common" }
ckb-jsonrpc-types = "0.105.1"
ckb-fixed-hash = "0.105.1"
anyhow = "1.0"
