[package]
name = "gw-jsonrpc-types"
version = "1.14.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
faster-hex = "0.4"
gw-types = { path = "../../gwos/crates/types" }
gw-common = { path = "../../gwos/crates/common" }
ckb-jsonrpc-types = "0.111.0-rc8"
ckb-fixed-hash = "0.111.0-rc8"
anyhow = "1.0"
serde_repr = "0.1.10"
serde_json = "1.0.94"
