[package]
name = "gw-mem-pool"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../types" }
gw-common = { path = "../common" }
gw-challenge = { path = "../challenge" }
gw-generator = { path = "../generator" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
gw-rpc-client = { path = "../rpc-client" }
gw-config = { path = "../config" }
gw-utils = { path = "../utils" }
gw-rpc-ws-server = { path = "../rpc-ws-server" }
gw-dynamic-config = { path = "../dynamic-config" }
gw-eoa-mapping = { path = "../eoa-mapping" }
gw-p2p-network = { path = "../p2p-network" }
rdkafka = { version = "0.25", default-features = false }
futures = { version = "0.3"}
tokio = "1.15"
anyhow = "1.0"
log = "0.4"
hex = "0.4"
async-trait = "0.1"
tracing = { version = "0.1", features = ["attributes"] }
tentacle = { version = "0.4.0-beta.4", features = ["unstable"] }

[dev-dependencies]
tempfile = "3.2"
rand = "0.8"
